# C-equals-1

./: .gitignore  CMinusEqualsMinus1Revision0.g4  README.md  test.txt
Compiler/CM1Compiler_CPP/: CM1Compiler_CPP.sln  CMakeLists.txt  CMakeSettings.json  rules.ruleset
Compiler/CM1Compiler_CPP/CM1Compiler_CPP/: CLIInterface.hpp  CM1Compiler_CPP.vcxproj  CM1Compiler_CPP.vcxproj.filters  CMakeLists.txt  main.cpp  packages.config
Compiler/CM1Compiler_CPP/CM1Compiler_CPP/compiler-interface/: manifest.mn
Compiler/CM1Compiler_CPP/Compiler/: AttributeSpecialFunctionsExecution.cpp  AttributeSpecialFunctionsExecution.hpp  AttributeUtility.cpp  AttributeUtility.hpp  CMakeLists.txt  CompilationUnitDatabaseBuilder.cpp  CompilationUnitDatabaseBuilder.hpp  Compiler.vcxproj  Compiler.vcxproj.filters  Environment.cpp  Environment.hpp  ExceptionHandling.cpp  ExceptionHandling.hpp  ExpressionBuilder.cpp  ExpressionBuilder.hpp  ExpressionEvaluator.cpp  ExpressionEvaluator.hpp  FunctionBodyBuilder.cpp  FunctionBodyBuilder.hpp  FunctionExecutionUtility.cpp  FunctionExecutionUtility.hpp  FunctionUtility.cpp  FunctionUtility.hpp  IRInlining.cpp  IRInlining.hpp  IntermidiateRepresentationEmmiter.cpp  IntermidiateRepresentationEmmiter.hpp  LLVMIR.hpp  PackageBuildUtility.cpp  PackageBuildUtility.hpp  PackageDatabaseManager.hpp  PackageDiscoveryUtility.cpp  PackageDiscoveryUtility.hpp  Preprocessor.cpp  Preprocessor.hpp  StatementEvaluator.cpp  StatementEvaluator.hpp  TypeUtility.cpp  TypeUtility.hpp  compilerInterfaceUtility.cpp  (+2 more)
Compiler/CM1Compiler_CPP/Compiler.Tests/: CMakeLists.txt  CodeCoverage.runsettings  CompilationUnitDataBaseBuilderTestingUtility.cpp  CompilationUnitDataBaseBuilderTestingUtility.hpp  CompilationUnitDataBaseBuilderTests.cpp  Compiler.Tests.cpp  Compiler.Tests.vcxproj  Compiler.Tests.vcxproj.filters  FunctionBuildingTests.cpp  IRInliningTests.cpp
Compiler/CM1Compiler_CPP/Compiler/Generic/: GenericInstantiationUtility.cpp  GenericInstantiationUtility.hpp
Compiler/CM1Compiler_CPP/Compiler/LLVMIntegration/: LLVMIR.hpp  LLVMIRUtility.cpp  LLVMIRUtility.hpp
Compiler/CM1Compiler_CPP/DataStructures/: Accessibility.cpp  Accessibility.hpp  Attribute.cpp  Attribute.hpp  Attribute.ixx  AttributeInstance.hpp  AttributeTarget.cpp  AttributeTarget.hpp  CMakeLists.txt  CompilationContext.hpp  CompilationResult.hpp  DataStructures.vcxproj  DataStructures.vcxproj.filters  Enum.hpp  Field.cpp  Field.hpp  Function.cpp  Function.hpp  Generic.hpp  GenericInstantiationData.hpp  INamedObject.cpp  INamedObject.hpp  ISerializationManager.hpp  IValueHolder.hpp  Interface.hpp  InvalidTypeException.hpp  MetadataObject.hpp  NameResolutionContext.cpp  NameResolutionContext.hpp  Namespace.cpp  Namespace.hpp  NullValueException.hpp  ObjectWithAccessibility.hpp  ObjectWithMetadata.hpp  PackageDatabase.hpp  QualifiedName.cpp  QualifiedName.hpp  RuntimeException.cpp  RuntimeException.hpp  SourcePointer.hpp  (+13 more)
Compiler/CM1Compiler_CPP/Execution/: Allocation.ixx  CMakeLists.txt  Execution.cpp  Execution.vcxproj  Execution.vcxproj.filters  Marshalling.ixx  Prymitives.ixx  Utility.hpp  dummy.cpp
Compiler/CM1Compiler_CPP/Execution.Tests/: Execution.Tests.vcxproj  pch.h  test.cpp
Compiler/CM1Compiler_CPP/FileSystem/: CMakeLists.txt  File.cpp  File.hpp  FileDiscovery.cpp  FileDiscovery.hpp  FileSystem.vcxproj  FileSystem.vcxproj.filters
Compiler/CM1Compiler_CPP/LanguageLogic/: AttributeUtility.cpp  AttributeUtility.hpp  BuiltInPackageBuildUtility.cpp  BuiltInPackageBuildUtility.hpp  CMakeLists.txt  CompilerInterface.cpp  CompilerInterface.hpp  CreateGetter.cpp  CreateGetter.hpp  ExpressionUtility.cpp  ExpressionUtility.hpp  FunctionPredicates.cpp  FunctionPredicates.hpp  GenericUtility.cpp  GenericUtility.hpp  GetterExecution.cpp  GetterExecution.hpp  IRPredicates.cpp  IRPredicates.hpp  IRUtility.cpp  IRUtility.hpp  InstantiateGeneric.cpp  InstantiateGeneric.hpp  IntermidiateRepresentationBuilder.hpp  LLVMBindings.cpp  LLVMBindings.hpp  LanguageLogic.vcxproj  LanguageLogic.vcxproj.filters  LiteralUtility.cpp  LiteralUtility.hpp  MetadataHolderBindings.hpp  MetatypeUility.cpp  MetatypeUility.hpp  NameResolver.cpp  NameResolver.hpp  NamespaceBuilder.cpp  NamespaceBuilder.hpp  OverloadResolutionUtility.cpp  OverloadResolutionUtility.hpp  RuntimeTypesConversionUtility.cpp  (+11 more)
Compiler/CM1Compiler_CPP/LanguageLogic.Tests/: CMakeLists.txt  LanguageLogic.Tests.cpp  LanguageLogic.Tests.vcxproj  LanguageLogic.Tests.vcxproj.filters  pch.h
Compiler/CM1Compiler_CPP/Parser/: CMakeLists.txt  CMinusEqualsMinus1Revision0.interp  CMinusEqualsMinus1Revision0.tokens  CMinusEqualsMinus1Revision0BaseListener.cpp  CMinusEqualsMinus1Revision0BaseListener.h  CMinusEqualsMinus1Revision0BaseVisitor.cpp  CMinusEqualsMinus1Revision0BaseVisitor.h  CMinusEqualsMinus1Revision0Lexer.cpp  CMinusEqualsMinus1Revision0Lexer.h  CMinusEqualsMinus1Revision0Lexer.interp  CMinusEqualsMinus1Revision0Lexer.tokens  CMinusEqualsMinus1Revision0Listener.cpp  CMinusEqualsMinus1Revision0Listener.h  CMinusEqualsMinus1Revision0Parser.cpp  CMinusEqualsMinus1Revision0Parser.h  CMinusEqualsMinus1Revision0Visitor.cpp  CMinusEqualsMinus1Revision0Visitor.h  Parser.vcxproj  Parser.vcxproj.filters  antlr4-runtime.h
Compiler/CM1Compiler_CPP/ParserAdapter/: CMakeLists.txt  ParserAdapter.cpp  ParserAdapter.hpp  ParserAdapter.vcxproj  ParserAdapter.vcxproj.filters
Compiler/CM1Compiler_CPP/SemanticModel/: Expression.ixx  LiteralExpression.ixx  SemanticModel.cpp  SemanticModel.ixx  SemanticModel.vcxproj  SemanticModel.vcxproj.filters  SourceFileReference.ixx  VariableReferenceExpression.ixx
Compiler/CM1Compiler_CPP/SemanticModel.Tests/: SemanticModel.Tests.vcxproj  test.cpp
Compiler/CM1Compiler_CPP/Utilities/: CMakeLists.txt  Utilities.vcxproj  Utilities.vcxproj.filters  algorithm.hpp  collections.hpp  compilation_shim.hpp  json.hpp  pointer_cast.hpp  range.hpp  typedRange.hpp
Compiler/CM1Compiler_CPP/antlr_runtime/: CMakeLists.txt  antlr4cpp-vs2017.sln  antlr4cpp-vs2017.vcxproj  antlr4cpp-vs2017.vcxproj.filters  r.ruleset
(+496 files in other folders)
